# diesel-duckdb

./: .envrc  Cargo.toml  README.md  flake.nix
src/: lib.rs
src/duckdb/: backend.rs  mod.rs
src/duckdb/connection/: mod.rs  transaction.rs
src/duckdb/query_builder/: mod.rs
src/duckdb/types/: mod.rs  value.rs
src/test/: mod.rs
